ChangeLog for ircd-seven
========================

This file lists every change made except typo and formatting fixes, which are
only listed in SVN log. For a summary of what has changed between releases,
see the NEWS file.

2006-10-31 Stephen Bennett <spb@gentoo.org>

	* src/messages.tab, src/s_newconf.c, modules/m_services.c,
	modules/m_whois.c: Touch up some numeric responses. Sort privileges
	alphabetically in oper-up notices, by request of LoRez. Only show real
	host in whois to self and auspex opers. Fix nick-change notices on
	RSFNC.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* doc/sgml/oper-guide/charybdis-oper-guide.sgml,
	doc/sgml/oper-guide/oprivs.sgml, doc/sgml/oper-guide/commands.sgml,
	doc/sgml/oper-guide/intro.sgml, doc/sgml/oper-guide/umodes.sgml:
	Documentation updates.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/snomask.h, src/snomask.c, modules/core/m_nick.c: Make
	snomask +n show local nick changes again, and add +N for global nick
	change notices.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* Makefile.in, src/Makefile.in, unsupported/Makefile.in,
	extensions/Makefile.in, tools/Makefile.in, doc/Makefile.in,
	modules/Makefile.in: Use mkdir -p in lots of places.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/s_conf.h, src/newconf.c, modules/m_kline.c: Allow disabling
	of KLINE foo@bar ON server.name in config, and when enabled send out
	netwide server notices when it is used. This does not affect clustered
	K-Lines.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/snomask.h, include/s_newconf.h, src/newconf.c,
	src/snomask.c, src/s_newconf.c, modules/m_grant.c: Make GRANT work
	remotely.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/snomask.h, src/snomask.c, modules/m_grant.c: Make GRANT work
	with allowed snomasks.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	modules/Makefile.in, +modules/m_grant.c: Add initial GRANT support,