@@ -72,6 +72,13 @@ m_map(struct Client *client_p, struct Client *source_p, int parc, const char *pa
 static int
 mo_map(struct Client *client_p, struct Client *source_p, int parc, const char *parv[])
 {
+	if(!IsOperRouting(source_p))
+	{
+		sendto_one(source_p, form_str(ERR_NOPRIVS), me.name, source_p->name,
+				"routing");
+		return 0;
+	}
+
 	dump_map(client_p, &me, buf);
 	sendto_one(client_p, form_str(RPL_MAPEND), me.name, client_p->name);
 
